# CatEngine

./: .clang-format  CMakeLists.txt  README.md  main.cpp
include/FileBridge/: FileBridge.hpp
include/Signal/: PoolSignal.hpp
shaders/: frag.glsl  fragment.glsl  vertex.glsl
src/: main.cpp
src/Application/: Application.cpp  Application.hpp
src/Rendering/Renderer/: Renderer.cpp  Renderer.hpp
src/Rendering/Shader/: Shader.cpp  Shader.hpp
src/Utils/: AnimationUtils.hpp  FileUtils.hpp  ShaderUtils.hpp
